--- a/media.css
+++ b/media.css
@@ -1,4 +1,7 @@
 @media screen and (max-width:768px){
+    body{
+        overflow-x: hidden;
+       }
     .sect1{
     justify-content: center;
     gap: 0;
